--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^0.17.0",
-    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-camera-roll/camera-roll": "^5.2.0",
     "@react-native-community/checkbox": "^0.5.0",
     "@react-native-community/hooks": "^2.8.1",
-    "@react-native-community/netinfo": "9.3.0",
-    "@react-native-community/slider": "4.2.3",
+    "@react-native-community/netinfo": "9.3.10",
+    "@react-native-community/slider": "4.4.2",
     "@react-native-community/toolbar-android": "^0.2.1",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/native": "^6.0.13",
@@ -25,16 +25,16 @@
     "@types/react-native": "~0.69.1",
     "axios": "^1.1.3",
     "deprecated-react-native-prop-types": "^3.0.1",
-    "expo": "~46.0.16",
-    "expo-av": "~12.0.4",
+    "expo": "^49.0.20",
+    "expo-av": "~13.4.1",
     "expo-image-multiple-picker": "^4.7.6",
-    "expo-image-picker": "~13.3.1",
-    "expo-linear-gradient": "~11.4.0",
-    "expo-media-library": "~14.2.0",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-media-library": "~15.4.1",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
     "react-native-animatable": "^1.3.3",
     "react-native-cache": "^2.0.2",
     "react-native-dotenv": "^3.3.1",
@@ -42,19 +42,19 @@
     "react-native-ionicons": "4.x",
     "react-native-modal": "^13.0.1",
     "react-native-modalbox": "^2.0.2",
-    "react-native-pager-view": "5.4.24",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^4.12.5",
-    "react-native-safe-area-context": "4.3.1",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-screens": "~3.22.0",
     "react-native-super-grid": "^5.0.0",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "13.9.0",
     "react-native-swipe-up-down": "^1.2.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-tab-view": "*",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
-    "react-native-webview": "11.23.0",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
