--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
