--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "react-native-animatable": "^1.3.3",
     "react-native-cache": "^2.0.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-image-picker": "^7.1.0",
     "react-native-image-zoom-viewer": "^3.0.1",
-    "react-native-ionicons": "4.x",
+    "react-native-ionicons": "^4.6.5",
     "react-native-modal": "^13.0.1",
     "react-native-modalbox": "^2.0.2",
     "react-native-pager-view": "6.2.0",
@@ -55,7 +56,7 @@
     "react-native-tab-view": "*",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "^13.2.2",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
