--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-cache": "^2.0.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-ionicons": "^4.6.5",
